--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   "homepage": "https://github.com/spacelephantlabs/vuepress-plugin-matomo-spacelephant/",
   "private": false,
   "scripts": {
+    "prepare": "husky install",
     "release": "release-it"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@release-it/conventional-changelog": "^2.0.1",
+    "husky": "^6.0.0",
     "release-it": "^14.6.1"
   }
 }
